Change image addresses

--- a/Avengers.html
+++ b/Avengers.html
@@ -18,12 +18,12 @@
             </tr>
             <tr>
                 <td colspan="2" class="infobox-image">
-                    <img src="The_avengers_logo.png" width="220" height="87">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/The_avengers_logo.png" width="220" height="87">
                 </td>
             </tr>
             <tr>
                 <td colspan="2" class="infobox-image">
-                    <img src="Avengers-members.jpeg" width="273" height="206"><br>
+                    <img src="https://upload.wikimedia.org/wikipedia/ru/4/4a/Avengers-members.jpeg" width="273" height="206"><br>
                     Некоторые Мстители на развороте обложки<br>
                     <i>Avengers (vol. 3) № 1 (февраль 1998)</i><br>
                     художник Джордж Перес<br>
