--- a/Thor.html
+++ b/Thor.html
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="infobox-image">
-                        <img src="Thor.jpg" width="250" height="296"><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/ru/c/c0/Thor_%28Marvel_Comics%29.jpg" width="250" height="296"><br>
                         Фрагмент вариантной обложки комикса <i>Thor</i> #3.<br>
                         Художник Эд МакГиннесс
                     </td>
@@ -139,7 +139,7 @@
             <tbody>
                 <tr>
                     <td colspan="2" class="infobox-image">
-                        <img src="Chris_Hemsworth.jpg" width="320" height="436"><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Chris_Hemsworth_by_Gage_Skidmore_2.jpg/800px-Chris_Hemsworth_by_Gage_Skidmore_2.jpg" width="320" height="436"><br>
                         Хемсворт на <a href="https://ru.wikipedia.org/wiki/San_Diego_Comic-Con_International">San Diego Comic-Con</a> в 2019 году
                     </td>
                 </tr>
