--- a/Avengers.html
+++ b/Avengers.html
@@ -5,7 +5,8 @@
 <body>
     <div class="mw-body">
         <h1>
-            Вселенная Marvel: Мстители
+            <a href="Avengers.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Wikipedia_logo_%28svg%29.svg/900px-Wikipedia_logo_%28svg%29.svg.png" width="30"></a>
+            &nbsp;Вселенная Marvel: Мстители
         </h1>
         <table class="infobox"><tbody>
             <tr>
@@ -72,6 +73,14 @@
         <p>
             Мстители, прозванные впоследствии «Самыми могучими героями Земли», первоначально состояли из Человека-муравья, Осы, <a href="Thor.html">Тора</a>, Железного человека и Халка. Однако с самого начала в составе команды стали происходить изменения: Халк вскоре покинул Мстителей, и к ним присоединился Капитан Америка. Изменяющийся состав стал визитной карточкой команды, хотя некоторое постоянство всё-таки сохранялось: Мстители сражались с такими врагами, одолеть которых в одиночку не мог ни один супергерой — так появилась фирменная фраза: «Мстители, общий сбор!» (англ. Avengers Assemble!). За всё время существования команды в ней побывали люди, мутанты, роботы, боги, пришельцы, сверхъестественные существа и даже бывшие злодеи.
         </p>
+        <h2>
+            <span class="mw-headline">
+                Вне комиксов
+            </span>
+        </h2>
+        <p>
+            На данный момент вышло двадцать три фильма. Фильмы «Железный человек» (2008), «Невероятный Халк» (2008), «Железный человек 2» (2010), «Тор» (2011), «Первый мститель» (2011) и «Мстители» (2012) объединены в первую фазу. Фильмы «Железный человек 3» (2013), «Тор 2: Царство тьмы» (2013), «Первый мститель: Другая война» (2014), «Стражи Галактики» (2014), «Мстители: Эра Альтрона» (2015) и «Человек-муравей» (2015) во вторую. «Первый мститель: Противостояние» (2016), «Доктор Стрэндж» (2016), «Стражи Галактики. Часть 2» (2017), «Человек-паук: Возвращение домой» (2017), «Тор: Рагнарёк» (2017), «Чёрная пантера» (2018), «Мстители: Война бесконечности» (2018), «Человек-муравей и Оса» (2018), «Капитан Марвел» (2019), «Мстители: Финал» (2019) и «Человек-паук: Вдали от дома» (2019) в третью. Первые три фазы в свою очередь объединены в сюжетную арку «Сага Бесконечности». На 7 мая 2021 года запланирована премьера фильма «Чёрная вдова», который начнёт четвёртую фазу и новую сюжетную арку.
+        </p>
         <h3>
             Фильмы
         </h3>
@@ -88,56 +97,76 @@
             Основная статья: 
             <b>
                <a href="https://ru.wikipedia.org/wiki/%D0%9C%D1%81%D1%82%D0%B8%D1%82%D0%B5%D0%BB%D0%B8_(%D1%84%D0%B8%D0%BB%D1%8C%D0%BC,_2012)">Мстители (фильм, 2012)</a>
+               &nbsp;<button onclick="document.getElementById('Avenger').style='display:yes'">[Показать]</button>
+               &nbsp;<button onclick="document.getElementById('Avenger').style='display:none'">[Скрыть]</button>
             </b>
         </div>
-        <ul>
-            <li>
+        <div id="Avenger" style="display:none">
+            <ul>
+                <li>
                 В первом фильме команда состояла из Железного человека, Капитана Америка, <a href="Thor.html">Тора</a>, Халка, Чёрной вдовы и Соколиного глаза. Команда противостояла Локи и вторгнувшейся с его помощью на Землю расе Читаури.
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
         <div class="hatnote">
             Основная статья: 
             <b>
                <a href="https://ru.wikipedia.org/wiki/%D0%9C%D1%81%D1%82%D0%B8%D1%82%D0%B5%D0%BB%D0%B8:_%D0%AD%D1%80%D0%B0_%D0%90%D0%BB%D1%8C%D1%82%D1%80%D0%BE%D0%BD%D0%B0">Мстители: Эра Альтрона</a>
+               &nbsp;<button onclick="document.getElementById('AvengerAltron').style='display:yes'">[Показать]</button>
+               &nbsp;<button onclick="document.getElementById('AvengerAltron').style='display:none'">[Скрыть]</button>
             </b>
         </div>
-        <ul>
-            <li>
+        <div id="AvengerAltron" style="display:none">
+            <ul>
+                <li>
                 В фильме «Мстители: Эра Альтрона», вышедшем в 2015 году, где Мстители притивостояли Альтрону, роботу, созданному Тони Старком и Брюсом Бэннером, к ним присоединились Алая Ведьма, Ртуть и Вижен. В финале фильма у Соколиного глаза родился третий ребёнок и чтобы позаботиться о семье он временно покинул команду, Старк решил взять таймаут и тоже позаботиться о своей с Пеппер семье, <a href="Thor.html">Тор</a> покинул команду чтобы разобраться с его видением, Халк тоже решил покинуть команду, просто скрывшись. Так же в команду вступают Воитель и Сокол.
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
         <div class="hatnote">
             Основная статья: 
             <b>
                <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B2%D1%8B%D0%B9_%D0%BC%D1%81%D1%82%D0%B8%D1%82%D0%B5%D0%BB%D1%8C:_%D0%9F%D1%80%D0%BE%D1%82%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D0%B5">Первый мститель: Противостояние</a>
+               &nbsp;<button onclick="document.getElementById('FirstAvenger').style='display:yes'">[Показать]</button>
+               &nbsp;<button onclick="document.getElementById('FirstAvenger').style='display:none'">[Скрыть]</button>
             </b>
         </div>
-        <ul>
-            <li>
+        <div id="FirstAvenger" style="display:none">
+            <ul>
+                <li>
                 Мстители (кроме Халка и <a href="Thor.html">Тора</a>) появились в фильме о Капитане Америка «Первый мститель: Противостояние». По сюжету фильма внутри команды возникли разногласия, вызванные Соковианским соглашением и терактом в ООН, виновником которого объявили Баки Барнса, известного как Зимний солдат. Капитан Америка, не поддержавший соглашение и пытающийся спасти Баки, собирает отряд, куда входят сам Зимний солдат, Сокол, Алая ведьма, вернувшийся к геройской деятельности Соколиный глаз и завербованный с помощью Сокола Человек-муравей. В команду поддержавшего соглашение Железного человека входят Воитель, Чёрная вдова, Вижен, Чёрная пантера, желающий отомстить Зимнему солдату за смерть отца, и завербованный Старком Человек-паук. В результате оказалось, что за всем стоял Гельмут Земо, стремившийся уничтожить Мстителей, поссорив их между собой. Во время битвы между командами Чёрная вдова переходит на сторону Капитана Америки, дав возможность ему и Зимнему солдату уйти, преследуя Земо. Воитель был парализован из-за случайного попадания в него луча Вижена. Сокол, Соколиный глаз, Алая ведьма и Человек-муравей попали в тюрьму, но были потом освобождены Капитаном Америка. Чёрная пантера, узнав правду, что его отца убил Земо, а не Зимний солдат, дал последнему убежище в Ваканде, где тот попросил себя заморозить, потому что всё ещё может стать живым оружием в руках человека, знающего специальный словесный код. В финале фильма в состав Мстителей входят Железный человек, Вижен и Воитель, получивший от Старка устройство, позволяющее ему ходить.
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
         <div class="hatnote">
             Основная статья: 
             <b>
                <a href="https://ru.wikipedia.org/wiki/%D0%9C%D1%81%D1%82%D0%B8%D1%82%D0%B5%D0%BB%D0%B8:_%D0%92%D0%BE%D0%B9%D0%BD%D0%B0_%D0%B1%D0%B5%D1%81%D0%BA%D0%BE%D0%BD%D0%B5%D1%87%D0%BD%D0%BE%D1%81%D1%82%D0%B8">Мстители: Война Бесконечности</a>
+               &nbsp;<button onclick="document.getElementById('AvangersInfinityWar').style='display:yes'">[Показать]</button>
+               &nbsp;<button onclick="document.getElementById('AvangersInfinityWar').style='display:none'">[Скрыть]</button>               
             </b>
         </div>
-        <ul>
-            <li>
+        <div id="AvangersInfinityWar" style="display:none">
+            <ul>
+                <li>
                 Члены Мстителей, а именно Капитан Америка, Брюс Бэннер, Чёрная вдова, Воитель, Сокол, Алая ведьма и Вижен собираются в Ваканде для противостояния Чёрному Ордену, пытающемуся захватить Камень разума. К ним присоединяется Баки Барнс и Чёрная Пантера вместе с Дора Милаже и армией Ваканды. Позже к ним на помощь приходит <a href="Thor.html">Тор</a> вместе с Ракетой и Грутом. Параллельно с этим Железный человек вместе с Человеком-пауком, Доктором Стрэнджем и Стражами Галактики сражаются с Таносом, мешая ему получить Камень времени. В конце фильма Танос, получив все Камни бесконечности, одним щелчком пальцев уничтожает половину населения Вселенной, среди исчезнувших оказались Барнс, Чёрная пантера, Сокол, Алая ведьма, Грут, Звёздный лорд, Дракс, Мантис, Доктор Стрэндж, Человек-паук, Мария Хилл и Ник Фьюри, успевший подать сигнал Капитану Марвел. В этом фильме не появились Соколиный глаз и Человек-муравей, так как после того как они были освобождены Капитаном Америкой, пошли на сделку с правительством и результате были посажены под домашний арест.
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
         <div class="hatnote">
             Основная статья: 
             <b>
                <a href="https://ru.wikipedia.org/wiki/%D0%9C%D1%81%D1%82%D0%B8%D1%82%D0%B5%D0%BB%D0%B8:_%D0%A4%D0%B8%D0%BD%D0%B0%D0%BB">Мстители: Финал</a>
+               &nbsp;<button onclick="document.getElementById('AvangersFinal').style='display:yes'">[Показать]</button>
+               &nbsp;<button onclick="document.getElementById('AvangersFinal').style='display:none'">[Скрыть]</button>
             </b>
         </div>
-        <ul>
-            <li>
-                Мстители проиграли бой с Таносом они современем находят Таноса но узнают что Камни бесконечности уничтожены Таносом. Спустя пять лет после событий Войны Бесконечности, Капитан Марвел, Небула, Окойе и Ракета присоедняются к Мстителям. Человек-муравей присоединяется к команде с миссией по извлечению Камней Бесконечности из прошлого, чтобы восстановить урон, нанесенный Таносом. Воскрешённые Мстители и союзники появляются в финальной битве против Таноса, включая Доктора Стрэнджа, Вонга, Человека-паука, Алую Ведьму, Сокола, Зимнего солдата, Осу, Звездного Лорда, Гамору, Дракса Разрушителя, Грута, Мантис, Черная пантера, Шури, М’Баку, Пеппер Поттс, Валькирия, Корг, Миек, Говард Утка и Краглин. В конце концов, единственными оставшимися оригинальными Мстителями являются Халк(не смотря на поврежденную руку) и Соколиный Глаз, так как умирают Черная Вдова и Железный Человек, <a href="Thor.html">Тор</a> присоединяется к Стражам, а Капитан Америка передает свой щит Соколу, что делает его преемником.
-            </li>
-        </ul>
+        <div id="AvangersFinal" style="display:none">
+            <ul>
+                <li>
+                Мстители проиграли бой с Таносом они современем находят Таноса но узнают что Камни бесконечности уничтожены Таносом. Спустя пять лет после событий Войны Бесконечности, Капитан Марвел, Небула, Окойе и Ракета присоедняются к Мстителям. Человек-муравей присоединяется к команде с миссией по извлечению Камней Бесконечности из прошлого, чтобы восстановить урон, нанесенный Таносом. Воскрешённые Мстители и союзники появляются в финальной битве против Таноса, включая Доктора Стрэнджа, Вонга, Человека-паука, Алую Ведьму, Сокола, Зимнего солдата, Осу, Звездного Лорда, Гамору, Дракса Разрушителя, Грута, Мантис, Черная пантера, Шури, М’Баку, Пеппер Поттс, Валькирия, Корг, Миек, Говард Утка и Краглин. В конце концов, единственными оставшимися оригинальными Мстителями являются Халк(не смотря на поврежденную руку) и Соколиный Глаз, так как умирают Черная Вдова и Железный Человек, <a href="Thor.html">Тор</a> присоединяется к Стражам, а Капитан Америка передает свой щит Соколу, что делает его       преемником.
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
