--- a/Avengers.html
+++ b/Avengers.html
@@ -62,7 +62,7 @@
                         <b>Девиз:</b> <i>Мстители, общий сбор!</i>
                     </li>
                     <li>
-                        <b>Известные члены:</b> <a href="Ironman.html">Железный человек</a>, <a href="Thor.html">Тор</a>, Халк, Черная вдова, Соколиный глаз, <a href="Capitan.html">Капитан Америка</a>
+                        <b>Известные члены:</b> <a href="Ironman.html">Железный человек</a>, <a href="Thor.html">Тор</a>, Халк, Черная вдова, Соколиный глаз, Капитан Америка
                     </li>
                 </td>
             </tr>
